namespace Facade
{
    public class Cliente
    {
    }
}