@startuml Nicosio
    skin rose
    skinparam classFontName Calibri
    skinparam shadowing false

    title Patrón Fachada
'====================================

class Cliente

package
{
    class Fachada
    {
        +Operacion1()
        +Operacion2()
        +OperacionN()
    }

    Cliente o-- Fachada
    Fachada o-- Subsistema1
    Fachada o-- Subsistema2
    Fachada o-- Subsistema3
}

caption https://youtu.be/w5Mvs6UbPzU

@enduml